# LLM_AgentAI

./: LICENSE  README.md
LangChain_MCP/: README.md  main.py  math_server.py  pyproject.toml  weather_server.py
agent_ollama/: README.md  agent.py  app.py  main.py  models.py  pyproject.toml  tools.py
chatbot_demo/: .env  README.md  main.py  requirements.txt
chatbot_demo/static/: chatscript.js  index.css
chatbot_ollama/: README.md  main.py  pyproject.toml  requirements.txt
chatbot_ollama/templates/: chatbot.html
llm_wiki/: LLM_wiki_init.md  README.md
rag_demo/: .env  README.md  doc_demo.md  main.ipynb  pyproject.toml
rag_ollama/: README.md  app.py  pyproject.toml  rag_agent.py  rag_citation.py
skill_dev/: README.md
skill_dev/build_banner/: make_banner.py  make_banner_skill.md
skill_dev/build_poster/: make_poster.py  speaker_poster_skill.md
